# avalanche

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  RELEASE.md  dev.py  dev.sh
.claude/: settings.json
.claude/commands/: new-feature.md  update-feature-parity.md
.github/: pull_request_template.md
.github/workflows/: ci.yml
core/: CLAUDE.md  Cargo.toml
core/crates/relay/: Cargo.toml  README.md
core/crates/relay/src/: main.rs
core/proto/: content.proto  groups.proto  provisioning.proto  recovery.proto  ws.proto
design/: Avalanche Designs.sketch
desktop/: CLAUDE.md  PLAN.md  README.md  package-lock.json  package.json
docs/: 00-design.md  01-design.md  01-technical-implementation.md  02-todos-deferred.md  03-groups.md  04-mobile-ux.md  04-multi-device.md  08-supergroups.md  12-abuse-handling.md  13-federation.md  14-bitchat-fallback.md  15-push-notifications.md  20-project-security.md  21-chatbot-project.md  22-adminbot.md  30-mobile-ux.md  32-bitchat-fallback.md  33-identity-auth-recovery.md  33-reactions.md  34-connection-state.md  35-attachments.md  35-profiles.md  37-multi-account-ux.md  40-deployment.md  41-relay-deployment.md  50-identity-auth-recovery.md  53-multi-account-ux.md  56-desktop-passkey-external-browser.md  60-android-implementation.md  61-desktop-implementation.md  62-feature-parity.md  CLAUDE.md  DIGEST.md  desktop-implementation.md  doc-review-findings.md  security-review-findings.md
infra/: docker-compose.yml
mobile/: CLAUDE.md
node/: package-lock.json
web/: .gitignore  CLAUDE.md  hugo.toml  package.json
(+329 files in other folders)
